builder interceptor support (#5591)
* Support for interceptors

* fix build

* checkstyles

* javadoc

* handle case where common Builder methods interfere with target bean methods

* more checkstyles

* Fix for issue #5608

* Fix for issue #5609

* address review comments

* resolved the rest of the review comments